--- a/src/shop-app.html
+++ b/src/shop-app.html
@@ -264,7 +264,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     -->
     <shop-googleyolo
         id="account"
-        profile="{{profile}}"></shop-googleyolo>
+        profile="{{profile}}"
+        page="[[page]]"></shop-googleyolo>
 
     <!--
       shop-payment-request provides the logic and hooks into the PaymentRequest API.
@@ -376,7 +377,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <!-- checkout view -->
       <shop-checkout name="checkout" cart="[[cart]]" total="[[total]]" route="{{subroute}}" g-pay-available="[[gPayAvailable]]" pr-available="[[prAvailable]]"></shop-checkout>
       <!-- account view -->
-      <shop-account name="account" profile="[[profile]]" route="[[subroute]]" prefilled-email="[[userEmail]]" selected="[[_pageSelected(page, 'account')]]"></shop-account>
+      <shop-account name="account" profile="[[profile]]" route="[[subroute]]" prefilled-email="[[userEmail]]"></shop-account>
 
       <shop-404-warning name="404"></shop-404-warning>
     </iron-pages>
