Better Google Pay buttons

--- a/src/shop-detail.html
+++ b/src/shop-detail.html
@@ -217,7 +217,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <button on-tap="_addToCart" aria-label="Add this item to cart">Add to Cart</button>
           </shop-button>
           <shop-button responsive id="buyNow" visible$="[[_hasGpay()]]">
-            <button on-tap="_buyNow" aria-label="Buy this item now">Buy Now</button>
+            <button
+              class="googlepay"
+              on-tap="_buyNow"
+              title="Buy with Google Pay">Buy with GPay</button>
           </shop-button>
         </div>
       </div>
