Google Pay button color tweak

--- a/src/shop-button.html
+++ b/src/shop-button.html
@@ -16,6 +16,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       shop-button {
         display: inline-block;
+        user-select: none;
       }
 
       shop-button > * {
@@ -46,7 +47,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       shop-button > .googlepay:active {
-        background-color: #000;
+        background-color: #c5cad3;
         color: transparent;
       }
 
