Add buy with google buttons

--- a/src/shop-app.html
+++ b/src/shop-app.html
@@ -314,13 +314,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <paper-icon-button icon="arrow-back" aria-label="Go back"></paper-icon-button>
           </a>
         </div>
-        <div class="left-bar-item">
+        <div class="logo" main-title><a href="/" aria-label="SHOP Home">SHOP</a></div>
+        <div>
           <a on-tap="_openDeveloperDialog">
             <paper-icon-button
+              icon="developer-console"
               aria-label="Developer"></paper-icon-button>
           </a>
         </div>
-        <div class="logo" main-title><a href="/" aria-label="SHOP Home">SHOP</a></div>
         <div class="account-btn-container">
           <a href="/account" tabindex="-1">
             <paper-icon-button
