--- a/src/shop-developer.html
+++ b/src/shop-developer.html
@@ -57,10 +57,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           theme="ace/theme/monokai"
           initialFocus></ace-widget>
         <div class="row" id="buttonRow">
-          <button
-            class="googlepay"
-            on-tap="_loadPaymentData"
-            title="Buy with Google Pay"></button>
+          <button style="background-color:#000;background-image:url('https://www.gstatic.com/instantbuy/svg/dark_long_gpay.svg');background-origin:content-box;background-position:center;background-repeat:no-repeat;background-size:contain;border:0;border-radius:4px;box-shadow:0 1px 1px 0 #3c40434D, 0 1px 3px 1px #3c404326;cursor:pointer;height:40px;min-height:40px;min-width:120px;outline:0;padding:11px 24px;width:240px;" on-tap="_loadPaymentData"></button>
         </div>
         <div id="response">
           <h3>Response</h3>
