--- a/src/shop-app.html
+++ b/src/shop-app.html
@@ -297,7 +297,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         ></shop-payment-method>
       <shop-payment-method
         supported-methods="https://google.com/pay"
-        data='{"merchantId":"02510116604241796260","apiVersion":1,"allowedPaymentMethods":["CARD","TOKENIZED_CARD"],"paymentMethodTokenizationParameters": { "tokenizationType":"PAYMENT_GATEWAY", "parameters": {"gateway":"stripe","stripe:publishableKey":"pk_test_fkdoiK6FR5BLZMFNbSGoDjpn","stripe:version":"5.1.0"}},"cardRequirements":{ "allowedCardNetworks":["AMEX","DISCOVER","MASTERCARD","VISA"], "billingAddressRequired":true,"billingAddressFormat":"FULL"}, "phoneNumberRequired":true,"emailRequired":true, "shippingAddressRequired":true}'
+        data='{"merchantId":"02510116604241796260","apiVersion":1,"allowedPaymentMethods":["CARD","TOKENIZED_CARD"],"paymentMethodTokenizationParameters": { "tokenizationType":"PAYMENT_GATEWAY", "parameters": {"gateway":"stripe","stripe:publishableKey":"pk_test_fkdoiK6FR5BLZMFNbSGoDjpn","stripe:version":"5.1.0"}},"cardRequirements":{ "allowedCardNetworks":["AMEX","DISCOVER","MASTERCARD","VISA"]}, "emailRequired":true,
+        "shippingAddressRequired":true}'
         ></shop-payment-method>
     </shop-payment-request>
 
@@ -748,7 +749,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             }));
           }
           // Proceed to sign-in if the user is not signed up
-          if (!this.accountData.isSignedIn()) {
+          if (!this.accountData || !this.accountData.isSignedIn()) {
             this.userEmail = instrumentResponse.payerEmail;
             this.set('route.path', '/account/signup');
           } else {
@@ -759,7 +760,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             this._orderSuccessModal.open();
             this._announce('Order processed successfully!');
           }
-        }, 2000);
+        }, 500);
       }
 
       _autoLogin() {
