--- a/src/shop-developer.html
+++ b/src/shop-developer.html
@@ -54,9 +54,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     </style>
 
-    <paper-dialog id="dialog">
+    <paper-dialog id="dialog" style="overflow:auto;">
       <div>
-        <h2>Developer Console</h2>
+        <h3>Developer Console</h3>
         <ace-widget
           id="aceWidget"
           mode="ace/mode/json"
