--- a/src/shop-payment-request.html
+++ b/src/shop-payment-request.html
@@ -10,7 +10,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="shop-payment-method.html">
-<script src="https://payments.developers.google.com/js/apis/pay.js"></script>
+<script src="https://pay.google.com/gp/p/js/pay.js"></script>
 
 <dom-module id="shop-payment-request">
   <script>
