--- a/src/shop-account.html
+++ b/src/shop-account.html
@@ -108,7 +108,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <iron-meta id="account" type="account"></iron-meta>
 
       <div class="welcome">
-        <span>Thanks for shopping with us! Why don't you create an account and get 10% discount now?</span>
+        <span>Thanks for shopping with us!</span>
       </div>
 
       <div class="subsection thanks" visible$="[[_computeSigningUp(route)]]">
