Update to use api V2 and async

--- a/src/shop-developer.html
+++ b/src/shop-developer.html
@@ -123,7 +123,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         }
 
         if (obj['transactionInfo'] && !obj['transactionInfo']['totalPrice']) {
-          obj['transactionInfo']['totalPrice'] = 123;
+          obj['transactionInfo']['totalPrice'] = '123';
         }
 
         if (obj['phoneNumberRequired']) {
