Update merchant name to include demo message

--- a/src/shop-app.html
+++ b/src/shop-app.html
@@ -297,7 +297,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         ></shop-payment-method>
       <shop-payment-method
         supported-methods="https://google.com/pay"
-        data='{"merchantInfo":{"merchantId":"02510116604241796260","merchantName":"test merchant"},"apiVersion":2,"apiVersionMinor":0,"allowedPaymentMethods":[{"type":"CARD","parameters":{"billingAddressRequired":false,"billingAddressParameters":{"phoneNumberRequired":false},"allowedCardNetworks":["AMEX","DISCOVER","VISA","MASTERCARD"],"allowedAuthMethods":["PAN_ONLY","CRYPTOGRAM_3DS"],"cvcRequired":false},"tokenizationSpecification":{"type":"PAYMENT_GATEWAY","parameters":{"gateway":"stripe","stripe:publishableKey":"pk_test_fkdoiK6FR5BLZMFNbSGoDjpn","stripe:version":"5.1.0"}}}],"emailRequired":true,"shippingAddressRequired":true,"transactionInfo":{"totalPriceStatus":"ESTIMATED","totalPrice":"123","currencyCode":"USD"}}'
+        data='{"merchantInfo":{"merchantId":"02510116604241796260","merchantName":"Test Merchant (demo - you will not be charged)"},"apiVersion":2,"apiVersionMinor":0,"allowedPaymentMethods":[{"type":"CARD","parameters":{"billingAddressRequired":false,"billingAddressParameters":{"phoneNumberRequired":false},"allowedCardNetworks":["AMEX","DISCOVER","VISA","MASTERCARD"],"allowedAuthMethods":["PAN_ONLY","CRYPTOGRAM_3DS"],"cvcRequired":false},"tokenizationSpecification":{"type":"PAYMENT_GATEWAY","parameters":{"gateway":"stripe","stripe:publishableKey":"pk_test_fkdoiK6FR5BLZMFNbSGoDjpn","stripe:version":"5.1.0"}}}],"emailRequired":true,"shippingAddressRequired":true,"transactionInfo":{"totalPriceStatus":"ESTIMATED","totalPrice":"123","currencyCode":"USD"}}'
         ></shop-payment-method>
     </shop-payment-request>
 
